Fix for only opening initial streams for plugins if we can handle it internally. This fixes RealPlayer popping up as a helper application for rstp:// protocols bug 85539 r=av sr=darin